--- a/privacy.html
+++ b/privacy.html
@@ -1,66 +1,83 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy</title>
+    <title>Politique de Confidentialité</title>
     <link rel="stylesheet" href="styleprivacy.css">
 </head>
 <body>
     <header>
-        <h1>Privacy Policy</h1>
+        <a href="index.html" class="home-button" title="Retour à l'accueil">
+            <img src="home.png" alt="Accueil" class="home-icon">
+        </a>
+        <h1>Politique de Confidentialité</h1>
     </header>
 
     <main>
         <section>
             <h2>1. Introduction</h2>
-            <p>We respect your privacy and are committed to protecting your personal information. This privacy policy explains how we collect, use, and protect your personal data when you use our website.</p>
+            <p>Nous respectons votre vie privée et nous engageons à protéger vos informations personnelles. Cette politique de confidentialité explique comment nous collectons, utilisons et protégeons vos données personnelles lorsque vous utilisez notre site web.</p>
         </section>
 
         <section>
-            <h2>2. Collection of Personal Data</h2>
-            <p>We collect personal information when you interact with our site, such as your name, email address, and information related to your site usage. This information is primarily collected to personalize your experience and improve our service.</p>
-            <p>In compliance with the <a href="https://www.legifrance.gouv.fr/loda/id/JORFTEXT000031364832/" target="_blank">General Data Protection Regulation (GDPR)</a>, we are committed to informing you about data collection and obtaining your explicit consent when necessary.</p>
+            <h2>2. Collecte des Données Personnelles</h2>
+            <p>Nous collectons des informations personnelles lorsque vous interagissez avec notre site, telles que votre nom, votre adresse e-mail et des informations liées à votre utilisation du site. Ces informations sont principalement collectées pour personnaliser votre expérience et améliorer notre service.</p>
+            <p>Conformément au <a href="https://www.legifrance.gouv.fr/loda/id/JORFTEXT000031364832/" target="_blank">Règlement Général sur la Protection des Données (RGPD)</a>, nous nous engageons à vous informer sur la collecte des données et à obtenir votre consentement explicite lorsque cela est nécessaire.</p>
         </section>
 
         <section>
-            <h2>3. Use of Data</h2>
-            <p>The data collected is used to enhance your experience on our site, personalize the services we offer, and send you relevant communications, such as newsletters or information about our products and services.</p>
+            <h2>3. Utilisation des Données</h2>
+            <p>Les données collectées sont utilisées pour améliorer votre expérience sur notre site, personnaliser les services que nous offrons, et vous envoyer des communications pertinentes, telles que des newsletters ou des informations concernant nos produits et services.</p>
         </section>
 
         <section>
-            <h2>4. Data Sharing</h2>
-            <p>We do not sell or rent your personal information to third parties. However, we may share your data with third-party service providers who assist us in managing the site or delivering our services, always in compliance with applicable laws.</p>
+            <h2>4. Partage des Données</h2>
+            <p>Nous ne vendons ni ne louons vos informations personnelles à des tiers. Cependant, nous pouvons partager vos données avec des prestataires de services tiers qui nous aident à gérer le site ou à fournir nos services, toujours en conformité avec les lois applicables.</p>
         </section>
 
         <section>
-            <h2>5. Data Security</h2>
-            <p>We implement appropriate security measures to protect your personal data from loss, misuse, or unauthorized access. However, no system is entirely secure, and we cannot guarantee the absolute security of information transmitted over the Internet.</p>
+            <h2>5. Sécurité des Données</h2>
+            <p>Nous mettons en place des mesures de sécurité appropriées pour protéger vos données personnelles contre la perte, l'utilisation abusive ou l'accès non autorisé. Cependant, aucun système n'est totalement sécurisé, et nous ne pouvons garantir la sécurité absolue des informations transmises sur Internet.</p>
         </section>
 
         <section>
             <h2>6. Cookies</h2>
-            <p>This site uses cookies to improve your browsing experience. You can choose to disable cookies in your browser settings, but this may affect certain site functionalities. For more information about cookies, please refer to our cookie policy.</p>
+            <p>Ce site utilise des cookies pour améliorer votre expérience de navigation. Vous pouvez choisir de désactiver les cookies dans les paramètres de votre navigateur, mais cela peut affecter certaines fonctionnalités du site. Pour plus d'informations sur les cookies, veuillez consulter notre politique de cookies.</p>
         </section>
 
         <section>
-            <h2>7. Your Rights</h2>
-            <p>Under the law, you have the right to access, rectify, or delete your personal data. If you wish to exercise these rights, please contact us at the following address: <a href="mailto:23l04l03@gmail.com">Mitriiini-Studio</a>.</p>
+            <h2>7. Vos Droits</h2>
+            <p>Conformément à la législation, vous avez le droit d'accéder, de rectifier ou de supprimer vos données personnelles. Si vous souhaitez exercer ces droits, veuillez nous contacter à l'adresse suivante : <a href="mailto:23l04l03@gmail.com">Mitriiini-Studio</a>.</p>
         </section>
 
         <section>
-            <h2>8. Changes to the Privacy Policy</h2>
-            <p>We reserve the right to modify this privacy policy at any time. Changes will be published on this page and will take effect immediately after publication.</p>
+            <h2>8. Modifications de la Politique de Confidentialité</h2>
+            <p>Nous nous réservons le droit de modifier cette politique de confidentialité à tout moment. Les modifications seront publiées sur cette page et prendront effet immédiatement après leur publication.</p>
         </section>
 
         <section>
             <h2>9. Contact</h2>
-            <p>For any questions regarding this privacy policy, you can contact us at the following address: <a href="mailto:23l04l03@gmail.com">Mitriiini-Studio</a></p>
+            <p>Pour toute question concernant cette politique de confidentialité, vous pouvez nous contacter à l'adresse suivante : <a href="mailto:23l04l03@gmail.com">Mitriiini-Studio</a></p>
         </section>
     </main>
 
+    <button id="scrollToTopBtn" title="Retour en haut">&#8679;</button>
+
     <footer>
-        <p>&copy; 2025 Miarintsoa. All rights reserved.</p>
+        <p>&copy; 2025 Miarintsoa. Tous droits réservés.</p>
     </footer>
+
+    <script>
+        const scrollToTopBtn = document.getElementById("scrollToTopBtn");
+        window.onscroll = () => {
+            scrollToTopBtn.style.display = window.scrollY > 300 ? "block" : "none";
+        };
+
+        scrollToTopBtn.onclick = () => {
+            window.scrollTo({ top: 0, behavior: 'smooth' });
+        };
+    </script>
+    <script src="scriptsecurejs.js" defer></script>
 </body>
 </html>
