--- a/terms.html
+++ b/terms.html
@@ -1,67 +1,96 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Terms of Use</title>
-    <link rel="stylesheet" href="styleterms.css">
+    <title>Politique de Confidentialité</title>
+    <link rel="stylesheet" href="styleprivacy.css">
 </head>
 <body>
     <header>
-        <h1>Terms of Use</h1>
+        <a href="index.html" class="home-button" title="Retour à l'accueil">
+            <img src="home.png" alt="Accueil" class="home-icon">
+        </a>
+        <h1>Politique de Confidentialité</h1>
     </header>
 
     <main>
         <section>
             <h2>1. Introduction</h2>
-            <p>Welcome to our website. By accessing and using this site, you agree to be bound by these terms of use. If you do not agree with these terms, please do not use this site.</p>
+            <p>Nous respectons votre vie privée et nous engageons à protéger vos informations personnelles. Cette politique de confidentialité explique comment nous collectons, utilisons et protégeons vos données personnelles lorsque vous utilisez notre site web.</p>
         </section>
 
         <section>
-            <h2>2. Acceptance of Terms</h2>
-            <p>By using this site, you agree to comply with all applicable laws and regulations. These terms may be modified at any time, and you are responsible for regularly reviewing this page to stay informed of updates. You must be 18 years or older to use this site or obtain the consent of your parents or guardians.</p>
+            <h2>2. Collecte des Données Personnelles</h2>
+            <p>Nous collectons des informations personnelles lorsque vous interagissez avec notre site, telles que votre nom, votre adresse e-mail et des informations liées à votre utilisation du site. Ces informations sont principalement collectées pour personnaliser votre expérience et améliorer notre service.</p>
+            <p>Conformément au <a href="https://www.legifrance.gouv.fr/loda/id/JORFTEXT000031364832/" target="_blank">Règlement Général sur la Protection des Données (RGPD)</a>, nous nous engageons à vous informer sur la collecte des données et à obtenir votre consentement explicite lorsque cela est nécessaire.</p>
         </section>
 
         <section>
-            <h2>3. Use of the Site</h2>
-            <p>You agree to use this site only for lawful purposes. You must not use this site in a way that infringes the rights of others, or that could harm the proper functioning of the site, its users, or its services.</p>
+            <h2>3. Utilisation des Données</h2>
+            <p>Les données collectées sont utilisées pour améliorer votre expérience sur notre site, personnaliser les services que nous offrons, et vous envoyer des communications pertinentes, telles que des newsletters ou des informations concernant nos produits et services.</p>
         </section>
 
         <section>
-            <h2>4. Intellectual Property</h2>
-            <p>All content on this site, including texts, images, videos, logos, graphics, and other elements, is protected by copyright and intellectual property laws. You are not authorized to copy, distribute, or exploit this content without the express permission of the author.</p>
-            <p>In accordance with Article L.122-4 of the French Intellectual Property Code, any unauthorized reproduction or representation of this site or its content is prohibited.</p>
+            <h2>4. Partage des Données</h2>
+            <p>Nous ne vendons ni ne louons vos informations personnelles à des tiers. Cependant, nous pouvons partager vos données avec des prestataires de services tiers qui nous aident à gérer le site ou à fournir nos services, toujours en conformité avec les lois applicables.</p>
         </section>
 
         <section>
-            <h2>5. Liability</h2>
-            <p>The site is not responsible for direct or indirect damages arising from the use or inability to use the site, including errors or omissions in the content, or service interruptions. We strive to keep the site available but do not guarantee it will be free of bugs or malfunctions.</p>
+            <h2>5. Sécurité des Données</h2>
+            <p>Nous mettons en place des mesures de sécurité appropriées pour protéger vos données personnelles contre la perte, l'utilisation abusive ou l'accès non autorisé. Cependant, aucun système n'est totalement sécurisé, et nous ne pouvons garantir la sécurité absolue des informations transmises sur Internet.</p>
         </section>
 
         <section>
-            <h2>6. External Links</h2>
-            <p>This site may contain links to other websites. We are not responsible for the content of these sites, and you visit them at your own risk.</p>
+            <h2>6. Cookies</h2>
+            <p>Ce site utilise des cookies pour améliorer votre expérience de navigation. Vous pouvez choisir de désactiver les cookies dans les paramètres de votre navigateur, mais cela peut affecter certaines fonctionnalités du site. Pour plus d'informations sur les cookies, veuillez consulter notre politique de cookies.</p>
         </section>
 
         <section>
-            <h2>7. Changes to Terms</h2>
-            <p>We reserve the right to modify these terms at any time. Changes will be posted on this page and will take effect immediately upon publication. It is your responsibility to regularly check this page to ensure you are aware of any changes.</p>
+            <h2>7. Vos Droits</h2>
+            <p>Conformément à la législation, vous avez le droit d'accéder, de rectifier ou de supprimer vos données personnelles. Si vous souhaitez exercer ces droits, veuillez nous contacter à l'adresse suivante : <a href="mailto:23l04l03@gmail.com">Mitriiini-Studio</a>.</p>
         </section>
 
         <section>
-            <h2>8. Governing Law</h2>
-            <p>These terms are governed by French law. In case of a dispute, the competent court will be that of the defendant's domicile, in accordance with Article 46 of the French Code of Civil Procedure.</p>
-            <p><a href="https://www.legifrance.gouv.fr/codes/id/LEGITEXT000006070719/" target="_blank">Code of Civil Procedure - Article 46</a></p>
+            <h2>8. Modifications de la Politique de Confidentialité</h2>
+            <p>Nous nous réservons le droit de modifier cette politique de confidentialité à tout moment. Les modifications seront publiées sur cette page et prendront effet immédiatement après leur publication.</p>
         </section>
 
         <section>
             <h2>9. Contact</h2>
-            <p>If you have any questions about these terms of use, you can contact us at the following address: <a href="mailto:23l04l03@gmail.com">Mitriiini-Studio</a></p>
+            <p>Pour toute question concernant cette politique de confidentialité, vous pouvez nous contacter à l'adresse suivante : <a href="mailto:23l04l03@gmail.com">Mitriiini-Studio</a></p>
         </section>
     </main>
 
+    <button id="scrollToTopBtn" title="Retour en haut">&#8679;</button>
+
+
     <footer>
-        <p>&copy; 2025 Miarintsoa. All rights reserved.</p>
+        <p>&copy; 2025 Miarintsoa. Tous droits réservés.</p>
     </footer>
+
+    <script>
+        const scrollToTopBtn = document.getElementById("scrollToTopBtn");
+        window.onscroll = () => {
+            scrollToTopBtn.style.display = window.scrollY > 300 ? "block" : "none";
+        };
+
+        scrollToTopBtn.onclick = () => {
+            window.scrollTo({ top: 0, behavior: 'smooth' });
+        };
+        
+document.addEventListener('contextmenu', event => event.preventDefault());
+
+document.addEventListener('keydown', function (event) {
+    if (
+        event.keyCode === 123 || // F12
+        (event.ctrlKey && event.shiftKey && event.keyCode === 73) || // Ctrl+Shift+I
+        (event.ctrlKey && event.keyCode === 85) || // Ctrl+U
+        (event.ctrlKey && event.keyCode === 83)    // Ctrl+S
+    ) {
+        event.preventDefault();
+    }
+});
+</script>
 </body>
 </html>
