--- a/portfolio.html
+++ b/portfolio.html
@@ -402,7 +402,7 @@
   <section class="software-mastered">
     <h2 class="glow-title">Logiciels maîtrisés</h2>
     <div class="software-rectangle">
-      <img src="Software.png" alt="Logiciels maîtrisés">
+      <img src="software.png" alt="Logiciels maîtrisés">
     </div>
   </section>
 </div>
