--- a/contact.html
+++ b/contact.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="sync.css">
 
 </head>
+  <meta name="viewport" content="width=1024">
 <body>
  <div id="overlay"></div>
   <div id="container">
