--- a/about.html
+++ b/about.html
@@ -8,6 +8,7 @@
           <link rel="stylesheet" href="sync.css">
     <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
 </head>
+    <meta name="viewport" content="width=1024">
 <body>
   <div id="overlay"></div>
   <div id="container">
