--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <link rel="stylesheet" href="sync.css">
   <link rel="icon" href="icon.png" type="image/png">
 </head>
-
+<meta name="viewport" content="width=1024">
 <body>
 <div id="overlay"></div>
   <div id="container">
