--- a/login.html
+++ b/login.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="stylelogin.css">
   <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
 </head>
+  <meta name="viewport" content="width=1024">
 <body>
 
 <div id="blocked-screen" class="hidden">
