--- a/privacy.html
+++ b/privacy.html
@@ -6,6 +6,7 @@
     <title>Politique de Confidentialité</title>
     <link rel="stylesheet" href="styleprivacy.css">
 </head>
+    <meta name="viewport" content="width=1024">
 <body>
     <header>
         <a href="index.html" class="home-button" title="Retour à l'accueil">
