--- a/skill.html
+++ b/skill.html
@@ -6,6 +6,7 @@
     <title>Portfolio Compétences</title>
     <link rel="stylesheet" href="styleskill.css"> <!-- Vérifie bien le nom -->
 </head>
+    <meta name="viewport" content="width=1024">
 <body>
     <header>
         <h1 class="glow-title">Mes Compétences</h1>
