--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
       <link rel="stylesheet" href="sync.css">
   <link rel="icon" href="icon.png" type="image/png">
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZQWLSJ9KKN"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-ZQWLSJ9KKN');
+</script>
+  
 <meta name="viewport" content="width=1024">
 <body>
 <div id="overlay"></div>
